wDesktop 0.5.3 (2010-02-09)
 * If we receive a subscribe request from someone in our list, accept it.

wDesktop 0.5.2 (2010-02-05)
 * Fix duplicated messages when archives overlap with received messages.
 * Improve text copy behaviour.
 * Fix opening links in messages.

wDesktop 0.5.1 (2010-02-05)
 * Center date label in chat history.
 * Improve clearing of chat history.
 * Implement copying text from the chat history.
 * Add CTRL-RETURN / ALT-RETURN shortcuts to enter a new chat line.

wDesktop 0.5.0 (2010-02-04)
 * Improve icon for photos upload.
 * Beautify and make conversation history more compact.
 * Display remote party's nickname in conversation panel.
 * Display own status in the form of an icon.

wDesktop 0.4.7 (2010-02-02)
 * Fix a display glitch introduced in version 0.4.6.

wDesktop 0.4.6 (2010-02-02)
 * Improve highlighting of contacts with pending messages.
 * Refresh diagnostics when the window is closed / reopened.
 * Improve validation of credentials and contacts.

wDesktop 0.4.5 (2010-02-01)
 * Improve behaviour of chat history when it is resized.
 * Fix timezone of chat history.
 * Make it possible to close the chat window using Cmd-W on Mac OS.
 * Enforce chat server SSL certificate validation.
 * Make it possible to send diagnostic reports.
 * Escape HTML in chat messages.

wDesktop 0.4.0 (2010-01-27)
 * Group all chats in a single window.
 * Add support for loading chat history from server.
 * Add mandatory check of SHA-1 hash for updates.
 * Exit if another instance of wDesktop connects to the chat server.
 * Add a weekly check for updates.

wDesktop 0.3.5 (2010-01-20)
 * When a message is received, don't grab the focus, notify the user.
 * Make the chat input grow as needed for long messages.
 * Only allow one chat contact to be selected at a time.
 * Display the contact's avatar in the chat dialog.
 * Make it possible to clear the history of a conversation.
 * Notify the user that wDesktop will quit once a new version is downloaded.