@@ -1,5 +1,6 @@
 wDesktop 0.5.3 (2010-02-09)
  * If we receive a subscribe request from someone in our list, accept it.
+ * When a contact is added to our list, update it's vCard.
 
 wDesktop 0.5.2 (2010-02-05)
  * Fix duplicated messages when archives overlap with received messages.
